Fix margins and gaps

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h2 {
     display: flex;
     padding-top: 10px;
     padding-left: 50px;
-    padding-right: 50px;
+    margin-right: 150px;
     gap: 20px;
     align-items: center;
     justify-content: center;
@@ -77,7 +77,7 @@ h2 {
 }
 
 input[type='text'] {
-    width: 45vw;
+    width: 40vw;
     height: 35px;
     border-radius: 10px;
     font-size: 20px;
@@ -184,6 +184,7 @@ button:hover {
 .a-text {
     font-size: 20px;
     margin-bottom: 20px;
+    line-height: 1.75;
 }
 
 .announce2 {
@@ -252,7 +253,7 @@ h1 > i {
 .user-row1 {
     display: flex;
     align-items: center;
-    gap: 75px;
+    gap: 65px;
     padding: 10px;
     width: 100%;
     justify-content: flex-end;
@@ -320,3 +321,4 @@ img {
     width: 65px;
     height: 55px;
 }
+
